# MLProject

./: app.py  application.py  pyproject.toml
.ebextensions/: python.conifg
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
templates/: home.html  index.html
